# LaphriaEngine

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini  vcpkg.json
CMake/: FindOpenAL.cmake  Findfastgltf.cmake  Findglfw3.cmake  Findimgui.cmake
docs/architecture/: high_level_architecture.md  path_tracing_pipeline.md  pbr_flowchart.md  physics_system_flowchart.md  rasterization_pipeline.md  ray_tracing_pipeline.md  resource_management_flowchart.md  scene_management_flowchart.md
src/: LaphriaValidationRunnerMain.cpp  main.cpp
src/Core/: Camera.cpp  Camera.h  EditorProject.cpp  EditorProject.h  EditorValidation.cpp  EditorValidation.h  EngineAuxiliary.h  EngineConfig.h  EngineCore.cpp  EngineCore.h  EngineHost.cpp  EngineHost.h  FrameContext.cpp  FrameContext.h  GltfImporter.cpp  GltfImporter.h  GpuResourceRegistry.cpp  GpuResourceRegistry.h  InputSystem.cpp  InputSystem.h  PathTracerAnalysis.cpp  PathTracerAnalysis.h  PipelineCollection.cpp  PipelineCollection.h  ResourceManager.cpp  ResourceManager.h  SwapchainManager.cpp  SwapchainManager.h  UISystem.cpp  UISystem.h  VmaContext.cpp  VmaContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanUtils.cpp  VulkanUtils.h
src/Physics/: Broadphase.cpp  Broadphase.h  PhysicsDefines.h  PhysicsSystem.cpp  PhysicsSystem.h
src/SceneManagement/: Frustum.h  Octree.h  Scene.cpp  Scene.h  SceneNode.cpp  SceneNode.h
src/shaders/: AnyHit.slang  ClosestHit.slang  Compute.slang  Denoiser.slang  LaphriaEngine.slang  Miss.slang  Physics.slang  RT_AnyHit.slang  RT_ClosestHit.slang  RT_Miss.slang  RT_Raygen.slang  Raygen.slang  Reprojection.slang  ShaderCommon.slang  Shadow.slang  Skinning.slang
tests/: EngineUnitTestsMain.cpp  PathTracerAnalysisTests.cpp  PathTracerAnalysisTests.h
tests/fixtures/validation/: invalid_project.laphria_project.json  invalid_scene.json  valid_project.laphria_project.json  valid_scene.json
tools/assets/: prepare_gltf_assets.py
